force-app/main/default/objects/RS_Bank_Account__c/RS_Bank_Account__c.object-meta.xml
<CustomObject>
    <description>Customer Bank Account Information</description>
    <label>RS Bank Account</label>
    <nameField>
        <label>RS Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RS Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>