force-app/main/default/objects/RS_Bank_Account__c/fields/Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RS Bank Accounts</relationshipLabel>
    <relationshipName>RS_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>