force-app/main/default/objects/RS_Bank_Account__c/fields/Account_Locked_Until__c.field-meta.xml
<CustomField>
    <fullName>Account_Locked_Until__c</fullName>
    <label>Account Locked Until</label>
    <type>DateTime</type>
</CustomField>