force-app/main/default/objects/RS_Bank_Account__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>account number of customer account</description>
    <externalId>true</externalId>
    <label>Account Number</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>