force-app/main/default/objects/RS_Bank_Account__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>