force-app/main/default/objects/RS_Bank_Account__c/fields/Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Branch_Code__c</fullName>
    <label>Branch Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>