force-app/main/default/objects/RS_Bank_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to customer&apos;s contact record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RS Bank Accounts</relationshipLabel>
    <relationshipName>RS_Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>