force-app/main/default/objects/RS_Bank_Account__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Email for OTP delivery</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>