force-app/main/default/objects/RS_Bank_Account__c/fields/Failed_Login_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Failed_Login_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Login Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>