force-app/main/default/objects/RS_Bank_Account__c/fields/Last_OTP_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_OTP_Request__c</fullName>
    <description>Prevents spam OTP requests</description>
    <label>Last OTP Request</label>
    <type>DateTime</type>
</CustomField>