force-app/main/default/objects/RS_Bank_Account__c/fields/Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Date__c</fullName>
    <label>Last_Transaction_Date</label>
    <type>DateTime</type>
</CustomField>