force-app/main/default/objects/RS_Bank_Account__c/fields/Nominee__c.field-meta.xml
<CustomField>
    <fullName>Nominee__c</fullName>
    <label>Nominee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>