force-app/main/default/objects/RS_Bank_Account__c/fields/OTP_Attempts__c.field-meta.xml
<CustomField>
    <fullName>OTP_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Track failed OTP attempts</description>
    <label>OTP Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>