force-app/main/default/objects/RS_Bank_Account__c/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <description>for customer verification</description>
    <label>OTP Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>