force-app/main/default/objects/RS_Bank_Account__c/fields/OTP_Expiry__c.field-meta.xml
<CustomField>
    <fullName>OTP_Expiry__c</fullName>
    <description>OTP expires after 1 minutes</description>
    <label>OTP Expiry</label>
    <type>DateTime</type>
</CustomField>