force-app/main/default/objects/RS_Bank_Account__c/fields/OTP_Verified__c.field-meta.xml
<CustomField>
    <fullName>OTP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if current session is verified</description>
    <label>OTP Verified</label>
    <type>Checkbox</type>
</CustomField>