force-app/main/default/objects/RS_Bank_Account__c/fields/PAN_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>PAN_Card_Number__c</fullName>
    <label>PAN Card Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>