force-app/main/default/objects/RS_Bank_Account__c/fields/Security_PIN__c.field-meta.xml
<CustomField>
    <fullName>Security_PIN__c</fullName>
    <label>Security PIN</label>
    <length>4</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>