force-app/main/default/objects/RS_Bank_Account__c/fields/Session_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Session_Expiry__c</fullName>
    <label>Session Expiry</label>
    <type>DateTime</type>
</CustomField>