force-app/main/default/objects/RS_Bank_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Balance__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Customer_Email__c</columns>
    <columns>Nominee__c</columns>
    <columns>Customer_Phone__c</columns>
    <columns>PAN_Card_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>